--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.16.0/jquery.validate.min.js"></script>
+
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.5/jquery.inputmask.min.js"></script>
     <script type="text/javascript" src="https://cdn.rawgit.com/prashantchaudhary/ddslick/master/jquery.ddslick.min.js" ></script>
 	
@@ -70,7 +70,7 @@
 
       <div class="column"> <label>
           <div class="title-input">Ваш телефон <span class="pink">*</span></div>
-          <input type="text" class="phone-field" name="phone" data-rule-required="true" data-rule-minlength="10" data-msg="Введите номер телефона" required>
+          <input type="text" class="phone-field" name="phone" placeholder="+7 (___) ___-__-__"  pattern="[\+]\d{1}\s[\(]\d{3}[\)]\s\d{3}[\-]\d{2}[\-]\d{2}" minlength="10" required>
         </label></div>
       <div class="column">
         <label>
@@ -79,12 +79,13 @@
         </label>
       </div>
       <div class="column">
-        <label>
+        
           <div class="title-input">Назначение врача (jpg, png, pdf)</div>
-          <input type="file">
+          <input type="file"> <span class="grey">Файл не выбран</span>
 
-        </label>
+       
       </div>
+	  
 
     </div>
     <div class="second">
@@ -141,19 +142,13 @@
   });
 });
 
-$(".phone-field").inputmask("+7(999)999-9999");
-jQuery.validator.addMethod("checkMaskPhone", function (value, element) {
-  return /\+\d{1}\(\d{3}\)\d{3}-\d{4}/g.test(value);
-});
-
-var form = $(".form-request");
+$(".phone-field").inputmask("+7 (999) 999-99-99");
 
 
-$.validator.addClassRules({
-  "phone-field": {
-    checkMaskPhone: true
-  }
-});
+
+
+
+
 
 form.submit(function (e) {
   e.preventDefault();
